--- a/.github/workflows/update_bezel_json.yml
+++ b/.github/workflows/update_bezel_json.yml
@@ -69,5 +69,5 @@ jobs:
           fi
 
           git add assets/bezel.min.json pubspec.yaml CHANGELOG.md
-          git commit -m "chore(ios): update bezel.min.json, bump version to ${new_version} and update CHANGELOG"
+          git commit -m "automated: chore(ios): update bezel.min.json, bump version to ${new_version} and update CHANGELOG"
           git push
