--- a/.github/workflows/publish_to_pub.yml
+++ b/.github/workflows/publish_to_pub.yml
@@ -3,16 +3,13 @@ name: Publish to Pub.dev
 on:
   push:
     branches: [beta, main]
-  workflow_run:
-    workflows: ["Update Bezel JSON"]
-    types:
-      - completed
+  workflow_call:
+    secrets:
+      CREDENTIAL_JSON:
+        required: true
 
 jobs:
   publishing:
-    # Run on push events normally. When triggered via workflow_run (Update Bezel JSON)
-    # only continue when the upstream workflow completed successfully.
-    if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
