--- a/.github/workflows/update_bezel_json.yml
+++ b/.github/workflows/update_bezel_json.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    outputs:
+      changes_committed: ${{ steps.commit.outputs.committed }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,13 +22,17 @@ jobs:
             https://raw.githubusercontent.com/markbattistella/BezelKit/main/Sources/BezelKit/Resources/bezel.min.json
 
       - name: Update version, changelog and commit changes
+        id: commit
         env:
           REPO_PUSH_TOKEN: ${{ secrets.REPO_PUSH_TOKEN }}
         run: |
           if git diff --quiet; then
             echo "No changes"
+            echo "committed=false" >> $GITHUB_OUTPUT
             exit 0
           fi
+
+          echo "committed=true" >> $GITHUB_OUTPUT
 
           git config user.name "github-actions"
           git config user.email "ketanchoyal@users.noreply.github.com"
@@ -71,3 +77,11 @@ jobs:
           git add assets/bezel.min.json pubspec.yaml CHANGELOG.md
           git commit -m "automated: chore(ios): update bezel.min.json, bump version to ${new_version} and update CHANGELOG"
           git push
+
+  # Call the publish workflow only when changes were committed
+  call-publish:
+    needs: sync-bezel-json
+    if: needs.sync-bezel-json.outputs.changes_committed == 'true'
+    uses: ./.github/workflows/publish_to_pub.yml
+    secrets:
+      CREDENTIAL_JSON: ${{ secrets.CREDENTIAL_JSON }}
